# Gstreamer.Build

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: PiSubmarineGstreamer.cmake
cmake/templates/: GstreamerBuildPlugins.cpp.in  StaticPluginRegistration.cpp.in
src/: CMakeLists.txt
test/: CMakeLists.txt
